# py-nl2sql

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml  readme.md  requirements.txt
docs/demo/: basic_use.ipynb  connect_postgres.py
evaluation/bird-sql/: challenging.json  generate_result.py  moderate.json  results-all.json  results.json  simple.json  utility.py
py_nl2sql/: __init__.py  db_instance.py  workflow.py
py_nl2sql/constants/: DIN-prompts.py  prompts.py  type.py
py_nl2sql/core/din_sql/: din_sql.py  prompts.py  readme.md  type.py
py_nl2sql/models/: llm.py
py_nl2sql/relational_database/: __init__.py  mysql_connector.py  postgresql_connector.py  sql_database.py  sql_factory.py
py_nl2sql/retrieval/: pre_retrieval.py  retrieval.py
py_nl2sql/utilities/: db_state_machine.py  decorators.py  tools.py
py_nl2sql/vector_database/: __init__.py  base_vectordb.py  faiss_wrapper.py  pgvector_wrapper.py
tests/: test_workflow.py
